@@ -8,3 +8,4 @@ v.0001 Duel Creatures
 - Shows first draw
 - Implemented player mulligan
 - Created SelectCardsFromHand input
+- Created opponent AI Mulligan
